Implement app entry point in typescript

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ bh_unicode_properties.cache
 GitHub.sublime-settings
 
 # End of https://www.gitignore.io/api/macos,node,sublimetext
+
+dist/**/*
