--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
@@ -39,6 +40,7 @@
     "@types/express-handlebars": "0.0.31",
     "@types/mongodb": "^3.1.27",
     "@types/mongoose": "^5.5.1",
+    "@types/multer": "^1.3.7",
     "@types/node": "^12.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
