--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@types/node": "^12.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
   }
 }
